fixed issue with tool tip visible onload

--- a/index.css
+++ b/index.css
@@ -19,7 +19,6 @@ svg {
     height: 80px;
     padding: 2px;
     font: 12px sans-serif;
-    background: lightsteelblue;
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
